--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Игра в пятнашки</title>
     <link href="style.css" rel="stylesheet">
     <script src="script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
   </head>
   <body>
     
