--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href="style.css" rel="stylesheet">
     <script src="script.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+   <link rel="icon" href="assets/favicon.ico">
+
   </head>
   <body>
     <audio id="one-part-sound-up" src="assets/up-move.mp3">
